Update my name and URLs

--- a/bastext.1
+++ b/bastext.1
@@ -231,9 +231,9 @@ text file into Commodore BASIC 7.0 programs.
 .SH "SEE ALSO"
 .PD 0
 .PP
-.I http://www.softwolves.pp.se/idoc/
+.I http://cbm.6502.org/
 .PP
-.I http://project64.c64.org/
+.I http://www.baltissen.org/newhtm/project64.htm
 .PD
 .SH BUGS
 .B tok64
@@ -263,7 +263,7 @@ header).
 This documentation covers version 1.1 BETA of
 .BR BasText .
 .SH AUTHOR
-BASTEXT was written by Peter Karlsson.
+BASTEXT was written by Peter Krefting.
 If you have bug-reports or questions, mail them to peter@softwolves.pp.se
 .PP
 A Softwolves Software (tm) Release in 1999.
