man: Fix date after CVS conversion

--- a/bastext.1
+++ b/bastext.1
@@ -1,5 +1,4 @@
-.\" $Id$
-.TH BASTEXT 1 "$Date$" "Softwolves Software" ""
+.TH BASTEXT 1 "1999-11-20" "Softwolves Software" ""
 .SH NAME
 bastext \- convert Commodore BASIC to text
 .SH SYNOPSIS
