--- a/bastext.1
+++ b/bastext.1
@@ -1,4 +1,4 @@
-.TH BASTEXT 1 "1999-11-20" "Softwolves Software" ""
+.TH BASTEXT 1 "2023-11-21" "Softwolves Software" ""
 .SH NAME
 bastext \- convert Commodore BASIC to text
 .SH SYNOPSIS
@@ -259,12 +259,12 @@ outputs (without the
 .I start tok64
 header).
 .SH VERSION\ INFORMATION
-This documentation covers version 1.1 BETA of
+This documentation covers version 1.1 of
 .BR BasText .
 .SH AUTHOR
 BASTEXT was written by Peter Krefting.
 If you have bug-reports or questions, mail them to peter@softwolves.pp.se
 .PP
-A Softwolves Software (tm) Release in 1999.
+A Softwolves Software (tm) Release in 2023.
 .PP
 This program is released under the GNU Public License.
