--- a/bastext.1
+++ b/bastext.1
@@ -4,13 +4,11 @@ bastext \- convert Commodore BASIC to text
 .SH SYNOPSIS
 .PD 0
 .B bastext
-\-i [\-t] [\-a] [\-s] [\-d filename]
-filename(s)
-.PP
-.B bastext
-\-o
-[\-t] [\-2|\-3|\-5|\-7|\-1]
-filename(s)
+\-i|\-o [\-f
+.IR TYPE ]
+[\-b
+.IR MODE ]
+[\-a] [\-s] [\-d filename] filename(s)
 .PP
 .B bastext
 \-h
@@ -69,6 +67,7 @@ written in hexadecimal):
 .TP
 1201
 .I VIC-20 BASIC 2.0 (8K RAM expansion)
+.TP
 132D
 .IR "Commodore 128 BASIC 7.1 extension by Rick Simon" .
 This file is a combined file, with both the BASIC 7.1
@@ -78,6 +77,7 @@ with BASIC 7.1's
 command).
 The preamble will be ignored, and the file will be
 interpreted as BASIC 7.1.
+.TP
 1C01
 .I Commodore 128 BASIC 7.0
 .TP
@@ -97,33 +97,18 @@ BASIC).
 .TP
 .I \-h
 Shows a brief help screen, with an overview of the available options.
-.SS "GENERAL MODIFIERS"
-.PP
-These general modifiers (works in both input and output modes)
-are available:
+.SS "FORMAT SELECTION"
+The
+.I \-f
+option selects the format of the input and output files:
 .TP
-.I \-t
+.I \-f t64
 Enable T64 (Commodore 64 emulator tape archive) mode.
 When in input mode, this means that instead of the specified file
 names being binary Commodore BASIC files, they are T64 archives.
 When in output mode, this means that instead of writing the
 binary Commodore BASIC files to files in the current directory,
 they will be written to a T64 archive named
-.TP
-.I \-x
-Enable Commander X16 BASIC support.
-This must be specified in input mode to properly detokenize Commander X16
-BASIC binary.
-In output mode, the tokx16 header will enable Commander X16 BASIC mode no
-matter which BASIC mode has been selected, but -x must be specifid if the
-text file uses a standard tok64 header.
-.TP
-.I \-e
-Enable VIC-20 Super Expander support.
-This must be specified both in input and output mode, as bastext for
-compatibility reasons selects the Commodore 64 Graphics52 expansion by
-default.
-
 .B bastext.t64
 in the current directory.
 If the archive already exists, it will be appended to.
@@ -135,13 +120,81 @@ an error message.
 The default directory size is controlled in the
 .I t64.h
 file.
-.SS "INPUT MODE MODIFIERS"
-.PP
-These modifiers are available only when in input mode:
+.TP
+.I \-f p00
+Enable P00 (PC64 emulator container file) mode.
+The Commodore BASIC files are written to the current directory but get a
+PC64 container header written to them and a file extension of .p00 added.
+This parameter is ignored in input mode, as it will auto-detect the .p00
+container format.
+.SS "BASIC SELECTION"
+The
+.I \-b
+option selects the BASIC dialect to use; if not specified,
+the format is detected automatically, unless otherwise mentioned:
+.TP
+.I \-b 2.0
+Force
+.I Commodore BASIC 2.0
+interpretation of
+.I all
+programs.
+.TP
+.I \-b 3.5
+Force
+.I Commodore C16/+4 BASIC 3.5
+interpretation of
+.I all
+programs.
+.TP
+.I \-b 7.0
+Force
+.I Commodore 128 BASIC 7.0
+interpretation of
+.I all
+programs.
+.TP
+.I \-b 7.1
+Force
+.I Commodore 128 BASIC 7.1 extension
+interpretation of
+.I all
+programs.
+.TP
+.I \-b TFC3
+Force
+.I Commodore 64 The Final Cartridge III BASIC extension
+interpretation of
+.I all
+programs.
+(See also
+.BR BUGS ).
+.TP
+.I \-b 52
+Force
+.I Commodore 64 Graphics52 BASIC extension
+interpretation of
+.I all
+programs.
+.TP
+.I \-b X16
+Enable Commander X16 BASIC support.
+This must be specified in input mode to properly detokenize Commander X16
+BASIC binary.
+In output mode, the tokx16 header will enable Commander X16 BASIC mode no
+matter which BASIC mode has been selected, but -x must be specifid if the
+text file uses a standard tok64 header.
+.TP
+.I \-b Super
+Enable VIC-20 Super Expander support.
+This must be specified both in input and output mode, as bastext for
+compatibility reasons selects the Commodore 64 Graphics52 expansion by
+default.
+.SS "BEHAVIOURAL OPTIONS"
 .TP
 .I \-a
 Convert all input files, not only those that have a "recognized"
-starting address.
+starting address (input mode only).
 .TP
 .I \-s
 Maintain strict compatibility with
@@ -158,58 +211,11 @@ The "strict" mode will not, however, undo the problems with
 "uppercase in quoted strings"-bug (see under
 .BR BUGS ).
 .TP
-.I \-d filename
+.IR \-d \ filename
 Selects the filename to write the output to.
 If the filename is not given, or is given as "-", the listings
 will be output on the standard output device (normally the
 console).
-.SS "OUTPUT MODE MODIFIERS"
-.PP
-These modifiers are available only when in output mode:
-.TP
-.I \-p
-Enable P00 (PC64 emulator container file) mode.
-The Commodore BASIC files are written to the current directory but get a
-PC64 container header written to them and a file extension of .p00 added.
-This parameter is ignored in input mode, as it will auto-detect the .p00
-container format.
-.TP
-.I \-2
-Force
-.I Commodore BASIC 2.0
-interpretation of
-.I all
-programs.
-.TP
-.I \-3
-Force
-.I Commodore 64 The Final Cartridge III BASIC extension
-interpretation of
-.I all
-programs.
-(See also
-.BR BUGS ).
-.TP
-.I \-5
-Force
-.I Commodore 64 Graphics52 BASIC extension
-interpretation of
-.I all
-programs.
-.TP
-.I \-7
-Force
-.I Commodore 128 BASIC 7.0
-interpretation of
-.I all
-programs.
-.TP
-.I \-1
-Force
-.I Commodore 128 BASIC 7.1 extension
-interpretation of
-.I all
-programs.
 .PP
 Please note that the MS-DOS and OS/2 versions (EMX compiled)
 uses
@@ -231,13 +237,13 @@ in the current directory, while maintaining
 .B tok64
 compatibility.
 .TP
-.B bastext \-it *.t64 | more
+.B bastext \-ift64 *.t64 | more
 Converts all files in all T64 archives (with filename suffix
 .IR .t64 )
 in the current directory into listings, displaying them
 one page at a time.
 .TP
-.B bastext \-o7 programs.txt
+.B bastext \-ob7.0 programs.txt
 Converts all programs in the
 .I programs.txt
 text file into Commodore BASIC 7.0 programs.
@@ -273,12 +279,12 @@ outputs (without the
 .I start tok64
 header).
 .SH VERSION\ INFORMATION
-This documentation covers version 1.1 of
+This documentation covers version 1.2 of
 .BR BasText .
 .SH AUTHOR
 BASTEXT was written by Peter Krefting.
 If you have bug-reports or questions, mail them to peter@softwolves.pp.se
 .PP
-A Softwolves Software (tm) Release in 2025.
+A Softwolves Software (tm) Release in 2026.
 .PP
-This program is released under the GNU Public License.
+This program is released under the GNU General Public License version 2.
